<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutBox"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:visibility="gone"
    android:onClick="aboutClicked" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:textSize="40sp"
        android:textColor="#990000"
        android:typeface="serif"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/app_name" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="26dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/app_version" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/about_contact" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:text="@string/about_box_text" />

</LinearLayout>