<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:visibility="gone">

    <Button
        android:id="@+id/trackCurrentLocationButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/mark_current_location"
        android:padding="14dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#666666"
        android:background="@layout/settings_button"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:onClick="trackCurrentLocation" />

    <Button
        android:id="@+id/themeToggle"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/black_theme_text"
        android:padding="14dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#666666"
        android:background="@layout/settings_button"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:onClick="changeTheme" />

    <Button
        android:id="@+id/showAboutBox"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/show_about_box"
        android:padding="14dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#666666"
        android:background="@layout/settings_button"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:onClick="showAboutBox" />

    <CheckBox
        android:id="@+id/updateWhileMinimized"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/update_while_minimized"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="36dp"
        android:paddingEnd="30dp"
        android:paddingLeft="36dp"
        android:paddingRight="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#666666"
        android:background="@layout/settings_button"
        android:layout_gravity="center"
        android:checked="false"
        android:layout_marginBottom="30dp"
        android:onClick="updateWhileMinimized" />

</LinearLayout>